--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Class of 2026 Prom</title>
-<link rel="stylesheet" href="atcpromwebsite.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
